tests/spec/compile-fail/003_overlapping_writable_access.zn
// category: compile-fail
// stage: mvp
// milestone: M4
// profile: freestanding
// purpose: writable access cannot overlap active read-only access

module tests.fail.overlappingWritableAccess;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.{Result, Ok};

fn readThenWrite(read: ArraySlice<U8>, mut write: ArraySlice<U8>) {}

fn main(mut allocator: GlobalAllocator) -> Result<Unit, AllocError> {
    var bytes = Array<U8>.filledIn(4, 0, mut allocator);
    readThenWrite(bytes, mut bytes); // expected-error[E0501]: writable access overlaps active read-only access
    return Ok(());
}
